--- a/3.线性表.md
+++ b/3.线性表.md
@@ -63,13 +63,32 @@ Location(ai) = Location(a1) + c(i-1)
 
 # 线性表分类
 
-顺序表  -   一整块足够大小的物理空间，依次存储数据
-单链表  -   链表存储的数据元素，物理存储位置随机，每个元素存储时配备指针，指向直接后继元素
-静态链表  - 个人理解所谓的静态指的是在物理存储上固定一个数组长度视为静态，静态链表存储数据，数据全部存储在数组中，物理存储位置随机，每个元素存储游标cur指向下一个后继元素，插入元素只需要更改插入的前一个节点和元素本身的cur
-动态链表  -  这种链表在初始时不一定分配足够的空间, 但是在后续插入的时候需要动态申请存储空间
-单向链表  -   无论动态还是静态，每一个元素都统一指向直接后继节点
-双向链表  -   每个节点不但有指针指向后继元素，还有一个指针域指向前面元素
-循环链表  -   单链表的终端结点的指针指向头节点，环状链表，成为循环链表
+### 顺序表
+
+一整块足够大小的物理空间，依次存储数据
+### 单链表
+
+链表存储的数据元素，物理存储位置随机，每个元素存储时配备指针，指向直接后继元素
+
+### 静态链表
+
+个人理解所谓的静态指的是在物理存储上固定一个数组长度视为静态，静态链表存储数据，数据全部存储在数组中，物理存储位置随机，每个元素存储游标cur指向下一个后继元素，插入元素只需要更改插入的前一个节点和元素本身的cur
+
+### 动态链表
+
+链表在初始时不一定分配足够的空间, 但是在后续插入的时候需要动态申请存储空间
+
+### 单向链表
+
+无论动态还是静态，每一个元素都统一指向直接后继节点
+
+### 双向链表
+
+每个节点不但有指针指向后继元素，还有一个指针域指向前面元素
+
+### 循环链表
+
+单链表的终端结点的指针指向头节点，环状链表，成为循环链表
 
 # 术语
 
