--- a/3.线性表.md
+++ b/3.线性表.md
@@ -17,7 +17,7 @@
 
 地址连续的存储单元存储线性表的数据元素，注意：地址连续
 
-1. 关于查找的时间复杂度
+### 关于查找的时间复杂度
 
 假设一个线性表元素是 a0 a1 ~ an
 
@@ -31,15 +31,16 @@ Location(ai) = Location(a1) + c(i-1)
 
 获取地址的算法，任意一个元素的时间复杂度都是一样的 O(1)
 
-2. 二、关于删除或新增元素的时间复杂度
+### 关于删除或新增元素的时间复杂度
 
 删除元素需要将后面的元素每个往前挪一个位置，但是如果删除最后一个元素时间复杂度就是O(1)，插入元素也是一样的
 
 时间复杂度是 O(n)
 
 
-3. 存储空间碎片是啥意思
+### 存储空间碎片是啥意思
 
+https://baike.baidu.com/item/%E5%86%85%E5%AD%98%E7%A2%8E%E7%89%87/3883950
 
 # 二 链式存储结构（单链表）
 
